# chip-tco-agent

./: .env.example  .gitignore  LICENSE  README.md  chip_tco_agent.ipynb  chip_tco_agent.py  cloud_prices.json  demo_output.txt  notebook-spec-tco-agent.md  onprem_assumptions.json  perf_benchmarks.json  pyproject.toml
docs/: design.md
docs/launch/: blog_post.md  prelaunch_checklist.md  registry_anthropic.md  registry_mcp_so.md  registry_smithery.md  show_hn_post.md
examples/: 01_70b_inference.py  02_8b_finetune.py  03_edge_inference.py  04_mixed_workload.py  05_buy_vs_rent.py
examples/outputs/: 02_8b_finetune.txt  03_edge_inference.txt  04_mixed_workload.txt  05_buy_vs_rent.txt  README.md
scripts/: regenerate_example_outputs.sh
